--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-streamlit==1.8.1
-torch==1.10.0
-torchvision==0.11.1
-Pillow
-matplotlib
+streamlit==1.20.0
+torch==2.5.1
+torchvision==0.20.1
+Pillow==11.0.0
+matplotlib==3.8.0
